kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - EXTERNAL_HOST_NAME
    secretName: letsencrypt-staging
  rules:
  - host: EXTERNAL_HOST_NAME
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: deep-thought
            port:
              number: 80
      - path: /webhook_alexa
        pathType: Prefix
        backend:
          service:
            name: babel-fish
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
